# ibmi-agent-skills

./: .gitignore  README.md  mcp.json  pyproject.toml
skills-ref/: README.md
skills/work-management/: SKILL.md
