[project]
name = "ibmi-agent-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mapepire-python>=0.2.0",
    "skills-ref",
]

[tool.uv.workspace]
members = [
    "skills-ref",
]

[tool.uv.sources]
skills-ref = { workspace = true, editable = true }
